# IronMesh

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  IRON_CORE_CLUSTER_REVIEW.md
config/: cluster-boot.toml  cluster-seeds.toml
iron-core/iron-core-cluster/: AGENTS.md  Cargo.toml  README.md  STATE_MACHINE_GENERIC_PLAN.md
iron-core/iron-core-cluster-v2/: AGENTS.md  Cargo.toml  README.md  build.rs  cluster-quality-optimization.md  cluster-structure-optimization.md
iron-core/iron-core-cluster-v2/src/: lib.rs  logging.rs
iron-core/iron-core-cluster-v2/src/http/: iron_raft_query.rs  mod.rs
iron-core/iron-core-cluster-v2/src/raft/: iron_raft_constants.rs  mod.rs
iron-core/iron-core-cluster-v2/src/raft/cluster/: iron_raft_boot_node.rs  iron_raft_cluster_manager.rs  iron_raft_cluster_manager_flow.rs  iron_raft_cluster_manager_support.rs  iron_raft_node.rs  mod.rs
iron-core/iron-core-cluster-v2/src/raft/cluster/manager/: iron_raft_cluster_handle.rs  iron_raft_cluster_manager.rs  iron_raft_cluster_manager_flow.rs  iron_raft_cluster_manager_support.rs  mod.rs
iron-core/iron-core-cluster-v2/src/raft/core/: iron_raft_state_machine_store.rs  mod.rs
iron-core/iron-core-cluster-v2/src/raft/dto/: mod.rs
iron-core/iron-core-cluster-v2/src/raft/model/: iron_raft_full_snapshot_meta.rs  iron_raft_full_snapshot_request.rs  iron_raft_full_snapshot_response.rs  iron_raft_log_store.rs  iron_raft_request.rs  iron_raft_state_machine_data.rs  iron_raft_state_machine_store.rs  iron_raft_stored_snapshot.rs  iron_raft_type_config.rs  mod.rs
iron-core/iron-core-cluster-v2/src/raft/model/command/: mod.rs
iron-core/iron-core-cluster-v2/src/raft/model/snapshot/: iron_raft_full_snapshot_meta.rs  iron_raft_full_snapshot_request.rs  mod.rs
iron-core/iron-core-cluster-v2/src/raft/network/: iron_raft_http_client.rs  iron_raft_http_server.rs  iron_raft_network.rs  iron_raft_network_factory.rs  iron_raft_tcp_client.rs  iron_raft_tcp_frame.rs  iron_raft_tcp_rpc_request.rs  iron_raft_tcp_rpc_response.rs  iron_raft_tcp_server.rs  mod.rs
iron-core/iron-core-cluster-v2/src/raft/network/tcp/: iron_raft_tcp_client.rs  iron_raft_tcp_frame.rs  iron_raft_tcp_server.rs
iron-core/iron-core-cluster-v2/src/raft/storage/: mod.rs
iron-core/iron-core-cluster/docs/: data-plane-structure.md
iron-core/iron-core-cluster/src/: config.rs  constant.rs  http.rs  lib.rs  logging.rs  runtime.rs  scheme.rs
iron-core/iron-core-cluster/src/api/: iron_cluster_handle.rs  iron_cluster_handler.rs  iron_cluster_manager.rs  iron_cluster_write_error.rs  iron_controller.rs  iron_handler.rs  mod.rs
iron-core/iron-core-cluster/src/cluster_api/: iron_cluster_handle.rs  iron_cluster_write_error.rs  mod.rs
iron-core/iron-core-cluster/src/cluster_data/: iron_cluster_data.rs  mod.rs
iron-core/iron-core-cluster/src/contract/: iron_cluster_entity_model.rs  iron_cluster_entity_model_source_node_tagged.rs  mod.rs
iron-core/iron-core-cluster/src/control_plane/: iron_cluster_config.rs  iron_cluster_manager.rs  iron_cluster_manager_core.rs  iron_cluster_manager_flow.rs  iron_cluster_manager_support.rs  iron_cluster_node.rs  iron_cluster_runtime.rs  iron_cluster_write_router.rs  iron_raft_cluster_manager.rs  iron_raft_cluster_manager_flow.rs  iron_raft_cluster_manager_support.rs  iron_raft_node.rs  mod.rs
iron-core/iron-core-cluster/src/core/: config.rs  http.rs  mod.rs  runtime.rs
iron-core/iron-core-cluster/src/core/raft/: mod.rs  network.rs  store.rs
iron-core/iron-core-cluster/src/data_plane/: iron_cat.rs  iron_cluster_data.rs  iron_cluster_entity.rs  iron_cluster_entity_value.rs  iron_cluster_state.rs  iron_cluster_state_reader.rs  iron_raft_state_machine_data.rs  mod.rs
iron-core/iron-core-cluster/src/data_plane/command/: mod.rs
iron-core/iron-core-cluster/src/data_plane/model/: iron_cat.rs  iron_dog.rs  mod.rs
iron-core/iron-core-cluster/src/model/: cluster.rs  cluster_config.rs  cluster_error.rs  cluster_frame.rs  cluster_raft.rs  error.rs  frame.rs  mod.rs  raft.rs
iron-core/iron-core-cluster/src/query/: iron_raft_query.rs  mod.rs
iron-core/iron-core-cluster/src/raft/: iron_raft_constants.rs  iron_raft_log_tag.rs  iron_type_config.rs  mod.rs  network.rs  store.rs
iron-core/iron-core-cluster/src/raft/cluster/: iron_raft_node.rs
iron-core/iron-core-cluster/src/raft/cluster/manager/: iron_raft_cluster_handle.rs  iron_raft_cluster_manager.rs  iron_raft_cluster_manager_flow.rs  iron_raft_cluster_manager_support.rs  mod.rs
iron-core/iron-core-cluster/src/raft/control/: iron_cluster_manager_core.rs  iron_cluster_manager_flow.rs  iron_cluster_manager_support.rs  iron_cluster_node.rs  mod.rs
iron-core/iron-core-cluster/src/raft/model/: iron_raft_type_config.rs  mod.rs
iron-core/iron-core-cluster/src/raft/model/command/: iron_cluster_write_request.rs  iron_cluster_write_response.rs  iron_raft_request.rs  iron_raft_response.rs  iron_raft_source_node_index_write_response.rs  iron_raft_state_machine_write_request.rs  mod.rs
iron-core/iron-core-cluster/src/raft/model/snapshot/: iron_raft_full_snapshot_meta.rs  iron_raft_full_snapshot_response.rs
iron-core/iron-core-cluster/src/raft/model/state_machine/: iron_cluster_data.rs  iron_cluster_data_command.rs  iron_raft_state_machine_data.rs  mod.rs
iron-core/iron-core-cluster/src/raft/network/: iron_network_factory.rs  iron_raft_network_factory.rs  iron_tcp_client.rs  iron_tcp_server.rs  mod.rs
iron-core/iron-core-cluster/src/raft/query/: iron_raft_query.rs  mod.rs
iron-core/iron-core-cluster/src/raft/storage/: iron_log_store.rs  iron_raft_log_store.rs  iron_raft_state_machine_container.rs  iron_raft_state_machine_data.rs  iron_raft_state_machine_store.rs  iron_state_machine.rs  mod.rs
iron-core/iron-core-cluster/src/tcp/: mod.rs
iron-core/iron-core-cluster/src/utils/: iron_snowflake_id.rs  mod.rs
iron-zenith-lab/iron-zenith-cluster-lab/: Cargo.toml  build.rs
iron-zenith-lab/iron-zenith-cluster-lab/config/: cluster-boot.toml
iron-zenith-lab/iron-zenith-cluster-lab/tests/: cluster_snapshot.rs  iron_tcp_frame_codec_test.rs  source_node_index.rs
(+85 files in other folders)
