[package]
name = "iron-core-cluster-v2"
version.workspace = true
edition.workspace = true

[lib]
name = "iron_core_cluster_v2"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
openraft = { version = "=0.9.24", features = ["serde", "storage-v2"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
