[package]
name = "iron-core-cluster"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
name = "iron_core_cluster"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
openraft = { version = "=0.9.24", features = ["loosen-follower-log-revert", "serde", "storage-v2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml.workspace = true
tracing = "0.1"
tracing-subscriber.workspace = true
