[package]
name = "iron-core-cluster"
version.workspace = true
edition.workspace = true

[lib]
name = "iron_core_cluster"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
openraft.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
