[package]
name = "iron-zenith-cluster-lab"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
iron-core-cluster.workspace = true
tokio.workspace = true
tracing.workspace = true
time.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
bytes.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
